<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <TextView
    android:id="@+id/example_feed_user_name_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/example_field_user_name" />

  <EditText
    android:id="@+id/example_feed_user_name_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_user_name_label"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="" />

  <TextView
    android:id="@+id/example_feed_password_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_user_name_entry"
    android:text="@string/example_field_password" />

  <EditText
    android:id="@+id/example_feed_password_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_password_label"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="" />

  <TextView
    android:id="@+id/example_feed_borrow_uri_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_password_entry"
    android:text="@string/example_field_borrow_uri" />

  <EditText
    android:id="@+id/example_feed_borrow_uri_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_borrow_uri_label"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="" />

  <Button
    android:id="@+id/example_feed_fetch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_borrow_uri_entry"
    android:layout_centerHorizontal="true"
    android:text="Go" />

  <TextView
    android:id="@+id/example_feed_presets_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_fetch"
    android:layout_marginTop="32dp"
    android:text="@string/example_field_presets" />

  <Button
    android:id="@+id/example_feed_preset_io7m"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_presets_label"
    android:text="@string/example_preset_io7m" />

  <Button
    android:id="@+id/example_feed_preset_flatland"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_presets_label"
    android:layout_toRightOf="@+id/example_feed_preset_io7m"
    android:text="@string/example_preset_flatland" />

  <Button
    android:id="@+id/example_feed_preset_default"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/example_feed_presets_label"
    android:layout_toRightOf="@+id/example_feed_preset_flatland"
    android:text="@string/example_preset_default" />

</RelativeLayout>
